issue spacing was reduced

--- a/app/assets/stylesheets/_hearings.scss
+++ b/app/assets/stylesheets/_hearings.scss
@@ -545,6 +545,7 @@ $color-hearings-saving: $color-gray;
   .cf-hearings-worksheet-issues {
     td {
       padding: 0 .5em;
+      padding-bottom: 0;
     }
 
     textarea {
@@ -561,6 +562,11 @@ $color-hearings-saving: $color-gray;
   }
 
 }
+
+  .cf-form-textarea {
+    min-height: 0 !important;
+    margin-bottom: 0;
+ }
 
   .cf-help-divider {
     display: none;
@@ -618,11 +624,13 @@ $color-hearings-saving: $color-gray;
       margin: 1em 0 0;
 
    }
-}
 
-  .cf-hearings-worksheet-issues .cf-form-textarea {
-    min-height: 0;
- }
+    .cf-form-textarea {
+      textarea {
+        height: 28px !important;
+     }
+  }
+}
 
   .cf-hearings-worksheet-data {
     white-space: pre-line;
